src/objects/EventTicketAgency__c.object
<CustomObject>
    <description>Links the specific ticket agency event with the event date time(s) through the Event-Ticket junction object</description>
    <fields>
        <fullName>AgencySystemID__c</fullName>
        <label>Agency System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BypassValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventCode__c</fullName>
        <label>Event Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventDateTime__c</fullName>
        <label>Event Date Time</label>
        <referenceTo>EventDateTime__c</referenceTo>
        <relationshipLabel>Event-Ticket Agencies</relationshipLabel>
        <relationshipName>EventTicketAgencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicOnSale__c</fullName>
        <label>Public On Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TMSystem__c</fullName>
        <label>TM System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TMSystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TicketAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ticket Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ticket Agency Events</relationshipLabel>
        <relationshipName>TicketAgencyEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event-Ticket Agency</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ETA-{000000}</displayFormat>
        <label>Event-Ticket Agency ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event-Ticket Agencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LNE_EventCodeRequired</fullName>
        <active>true</active>
        <description>Event Code required if selected ticket agency is feed enabled (checkbox on ticket agency account)</description>
        <errorConditionFormula>EventCode__c = NULL &amp;&amp;  TicketAgency__r.FeedEnabled__c = TRUE
&amp;&amp;!$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;
!BypassValidation__c &amp;&amp; !PRIORVALUE(BypassValidation__c)</errorConditionFormula>
        <errorDisplayField>EventCode__c</errorDisplayField>
        <errorMessage>Event code is required if selected ticket agency is feed enabled</errorMessage>
    </validationRules>
</CustomObject>